[package]
name = "two-captcha"
version = "0.1.4"
license = "MIT"
authors = ["Alexey Voznyuk <me@swizard.info>"]
description = "2captcha async client."
edition = "2018"

[dependencies]
log = "^0.4"
serde = "^1.0"
base64 = "^0.13"
futures = "^0.3"
serde_json = "^1.0"
serde_derive = "^1.0"
async-trait = "0.1.51"

reqwest = { version = "^0.11", features = ["multipart", "stream"] }
tokio = { version = "^1.11", features = ["full"] }
tokio-util = { version = "^0.6", features = ["codec"] }
